log
ju., 21 de abr. de 2022 11:15:16: 
 tests:  1|8
total_score: 0/70
bf556b9
ju., 21 de abr. de 2022 11:37:45: 
 treemap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  8|7
total_score: 10/70
e3112fd
Sun Apr 24 15:05:31 HSP 2022: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  11|6
total_score: 15/70
5faa4e2
Sun Apr 24 15:24:07 HSP 2022: 
 treemap.c | 33 +++++++++++++++++++++++++++++++--
 1 file changed, 31 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:23: error: incompatible types when assigning to type 'TreeNode * {aka struct TreeNode *}' from type 'TreeNode {aka struct TreeNode}'
             aux->left = n;
                       ^
treemap.c:55:14: error: invalid type argument of '->' (have 'TreeNode {aka struct TreeNode}')
             n->parent = aux;
              ^~
treemap.c: In function 'nextTreeMap':
treemap.c:134:25: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         tree->current = minimun(tree->current->right);
                         ^~~~~~~
treemap.c:134:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         tree->current = minimun(tree->current->right);
                       ^
treemap.c:137:16: error: 'tre' undeclared (first use in this function)
         return tre->current->pair;
                ^~~
treemap.c:137:16: note: each undeclared identifier is reported only once for each function it appears in
cc1.exe: all warnings being treated as errors
Compilation failed
39fa436
Sun Apr 24 15:26:19 HSP 2022: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:54:23: error: incompatible types when assigning to type 'TreeNode * {aka struct TreeNode *}' from type 'TreeNode {aka struct TreeNode}'
             aux->left = n;
                       ^
treemap.c:55:14: error: invalid type argument of '->' (have 'TreeNode {aka struct TreeNode}')
             n->parent = aux;
              ^~
treemap.c: In function 'nextTreeMap':
treemap.c:134:25: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         tree->current = minimun(tree->current->right);
                         ^~~~~~~
treemap.c:134:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         tree->current = minimun(tree->current->right);
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
63d8ea0
Sun Apr 24 15:27:33 HSP 2022: 
 treemap.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:67:8: error: 'return' with a value, in function returning void [-Werror]
 return NULL;
        ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
treemap.c: In function 'nextTreeMap':
treemap.c:135:25: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         tree->current = minimun(tree->current->right);
                         ^~~~~~~
treemap.c:135:23: error: assignment makes pointer from integer without a cast [-Werror=int-conversion]
         tree->current = minimun(tree->current->right);
                       ^
cc1.exe: all warnings being treated as errors
Compilation failed
858d3ac
Sun Apr 24 15:28:21 HSP 2022: 
 treemap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:67:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
ca9a579
Sun Apr 24 18:57:28 HSP 2022: 
 treemap.c | 8 ++------
 1 file changed, 2 insertions(+), 6 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:67:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
754ad44
Sun Apr 24 19:16:59 HSP 2022: 
In file included from test.c:4:0:
treemap.c: In function 'insertTreeMap':
treemap.c:67:12: error: 'return' with a value, in function returning void [-Werror]
     return NULL;
            ^~~~
treemap.c:49:6: note: declared here
 void insertTreeMap(TreeMap * tree, void* key, void * value) {
      ^~~~~~~~~~~~~
cc1.exe: all warnings being treated as errors
Compilation failed
9259118
Sun Apr 24 19:17:33 HSP 2022: 
 treemap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  15|4
total_score: 20/70
088d717
Sun Apr 24 19:37:04 HSP 2022: 
 treemap.c | 15 ++++++++-------
 1 file changed, 8 insertions(+), 7 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:125:16: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         return minimun(a->right);
                ^~~~~~~
treemap.c:125:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return minimun(a->right);
                ^~~~~~~~~~~~~~~~~
treemap.c:127:19: error: initialization from incompatible pointer type [-Werror=incompatible-pointer-types]
     TreeNode *b = a->pair;
                   ^
treemap.c:130:11: error: assignment from incompatible pointer type [-Werror=incompatible-pointer-types]
         b = b->pair;
           ^
treemap.c:132:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return b;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
b7b5d0a
Sun Apr 24 19:42:42 HSP 2022: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:0:
treemap.c: In function 'nextTreeMap':
treemap.c:125:16: error: implicit declaration of function 'minimun' [-Werror=implicit-function-declaration]
         return minimun(a->right);
                ^~~~~~~
treemap.c:125:16: error: return makes pointer from integer without a cast [-Werror=int-conversion]
         return minimun(a->right);
                ^~~~~~~~~~~~~~~~~
treemap.c:132:12: error: return from incompatible pointer type [-Werror=incompatible-pointer-types]
     return b;
            ^
cc1.exe: all warnings being treated as errors
Compilation failed
cb83822
